configs/postgres/deployment-postgres.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
    # rollingUpdate:
    #   maxSurge: 0
    #   maxUnavailable: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:10.13
          ports:
            - containerPort: 5432
              protocol: TCP
          # resources:
          #   requests:
          #     cpu: 200m
          #     memory: 500Mi
          #   limits:
          #     cpu: 200m
          #     memory: 500Mi
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pv-claim
